--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <meta property="og:title" content="System & Flow — Project Management. Simplified." />
   <meta property="og:description" content="Lightweight SaaS apps and AI prompts for PMs. Faster, smarter execution without the chaos." />
   <meta property="og:url" content="https://systemnflow.com/" />
-  <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="System & Flow — Project Management. Simplified." />
   <meta name="twitter:description" content="Lightweight SaaS apps and AI prompts for PMs. Faster, smarter execution without the chaos." />
-  <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
   <!-- JSON‑LD (Organization) -->
   <script type="application/ld+json">
@@ -32,7 +32,7 @@
     "@type": "Organization",
     "name": "System & Flow",
     "url": "https://systemnflow.com/",
-    "logo": "https://systemnflow.com/logo.png",
+    "logo": "https://systemnflow.com/assets/img/logo.png",
     "sameAs": [
       "https://www.instagram.com/systemnflow",
       "https://www.tiktok.com/@systemnflow",
@@ -64,7 +64,7 @@
   <header class="wrap header">
     <div class="brand">
       <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
@@ -77,7 +77,7 @@
 
   <!-- Hero -->
   <main class="wrap hero">
-    <img src="/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" />
+    <img src="/assets/img/SNF_logo.png" alt="System & Flow full logo" class="logo-hero" />
     <h1>Project Management.<br/>Simplified.</h1>
     <p class="sub">
       Built <strong>by project managers, for project managers</strong> — System &amp; Flow delivers
