--- a/index.html
+++ b/index.html
@@ -45,11 +45,18 @@
   <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
   <link rel="preload" href="/styles.css" as="style" />
 
-  <!-- Styles & Favicon -->
+  <!-- Styles -->
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
 
-   <!-- Google tag (gtag.js) -->
+  <!-- Favicons / App Icons (moved to /assets/img/) -->
+  <link rel="icon" href="/assets/img/favicon.ico" />
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png" />
+
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -116,7 +123,7 @@
     </section>
   </main>
 
-  <!-- Featured apps (match Apps page look) -->
+  <!-- Featured apps -->
   <section class="wrap grid">
     <!-- Transcript Analyzer -->
     <div class="card">
