--- a/apps.html
+++ b/apps.html
@@ -4,98 +4,45 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- Primary SEO -->
   <title>Project Management SaaS Apps & AI Prompts | System & Flow</title>
   <meta name="description" content="Lightweight SaaS apps and AI prompts — built by project managers, for project managers. Save hours, cut through noise, and focus on execution." />
   <link rel="canonical" href="https://systemnflow.com/apps.html" />
   <meta name="robots" content="index,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Open Graph / Social -->
+  <!-- Social -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Project Management SaaS Apps & AI Prompts | System & Flow" />
   <meta property="og:description" content="SaaS apps and AI prompts designed by project managers, for project managers. Faster, smarter execution without the chaos." />
   <meta property="og:url" content="https://systemnflow.com/apps.html" />
-  <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
-
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Project Management SaaS Apps & AI Prompts | System & Flow" />
   <meta name="twitter:description" content="SaaS apps and AI prompts designed by project managers, for project managers. Faster, smarter execution without the chaos." />
-  <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <!-- JSON-LD (ItemList of Products) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ItemList",
-    "name": "System & Flow Apps",
-    "url": "https://systemnflow.com/apps.html",
-    "itemListElement": [
-      {
-        "@type": "Product",
-        "position": 1,
-        "name": "Transcript Analyzer",
-        "description": "Turn raw meeting notes into Actions, Risks, and Decisions in seconds.",
-        "brand": { "@type": "Brand", "name": "System & Flow" },
-        "url": "https://systemnflow.com/apps.html#transcript-analyzer",
-        "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
-      },
-      {
-        "@type": "Product",
-        "position": 2,
-        "name": "Status Report Generator",
-        "description": "Create exec-ready one-pagers with instant export to PDF or Markdown.",
-        "brand": { "@type": "Brand", "name": "System & Flow" },
-        "url": "https://systemnflow.com/apps.html#status-report-generator",
-        "offers": { "@type": "Offer", "price": "19", "priceCurrency": "USD" }
-      },
-      {
-        "@type": "Product",
-        "position": 3,
-        "name": "Risk Radar",
-        "description": "Automatically flag top project risks with AI-suggested mitigations.",
-        "brand": { "@type": "Brand", "name": "System & Flow" },
-        "url": "https://systemnflow.com/apps.html#risk-radar",
-        "offers": { "@type": "Offer", "price": "19", "priceCurrency": "USD" }
-      },
-      {
-        "@type": "Product",
-        "position": 4,
-        "name": "AI Prompt Pack for PMs",
-        "description": "50+ prompts crafted by PMs to supercharge planning, reporting, and alignment.",
-        "brand": { "@type": "Brand", "name": "System & Flow" },
-        "url": "https://systemnflow.com/apps.html#ai-prompt-pack",
-        "offers": { "@type": "Offer", "price": "29", "priceCurrency": "USD" }
-      }
-    ]
-  }
-  </script>
-
-  <!-- Performance hints -->
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <!-- CSS -->
   <link rel="preload" href="/styles.css" as="style" />
-
-  <!-- Styles & Favicon -->
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
 
-   <!-- Google tag (gtag.js) -->
+  <!-- Favicons (in /assets/img/) -->
+  <link rel="icon" href="/assets/img/favicon.ico" />
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png" />
+
+  <!-- GA -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-1FRFWG4X18');
-  </script>
+  <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-1FRFWG4X18');</script>
 </head>
 <body class="dark">
-
-  <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
       <a href="/" aria-label="Go home" style="display:flex;align-items:center;gap:10px;text-decoration:none;">
-        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
@@ -106,20 +53,17 @@
     </nav>
   </header>
 
-  <!-- Page intro -->
   <main class="wrap hero" style="padding:60px 20px 14px">
-    <h1>SaaS Apps & AI Prompts</h1>
+    <h1>SaaS Apps &amp; AI Prompts</h1>
     <p class="sub">Built by project managers, for project managers. Start with the free Analyzer, then explore premium apps and prompt packs.</p>
   </main>
 
-  <!-- App cards -->
   <section class="wrap grid">
-    <!-- 1) Transcript Analyzer (Free) -->
-    <div class="card" id="transcript-analyzer">
-      <div class="card-icon">📄</div>
-      <div class="card-head">
-        <h3>Transcript Analyzer (Free)</h3>
-        <span class="badge" title="Live and ready">Live</span>
+    <!-- Transcript Analyzer -->
+    <div class="card">
+      <div class="card-top">
+        <h3 style="margin:0">Transcript Analyzer (Free)</h3>
+        <span class="badge live"><span class="dot"></span> Live</span>
       </div>
       <p>Turn raw meeting notes into <strong>Actions, Risks, and Decisions</strong> in seconds.</p>
       <div class="card-actions">
@@ -128,50 +72,43 @@
       </div>
     </div>
 
-    <!-- 2) Status Report Generator -->
-    <div class="card" id="status-report-generator">
-      <div class="card-icon">📑</div>
-      <div class="card-head">
-        <h3>Status Report Generator</h3>
-        <span class="badge" title="Launching soon">Coming Soon</span>
+    <!-- Status Report Generator -->
+    <div class="card">
+      <div class="card-top">
+        <h3 style="margin:0">Status Report Generator</h3>
+        <span class="badge soon"><span class="dot"></span> Coming&nbsp;Soon</span>
       </div>
-      <p>Create <strong>exec-ready one-pagers</strong> with instant export to PDF or Markdown.</p>
+      <p>Create <strong>exec‑ready one‑pagers</strong> with instant export to PDF or Markdown.</p>
       <div class="card-actions">
-        <button class="btn primary" disabled>Open</button>
         <a class="btn ghost" href="/contact.html">Get Notified</a>
       </div>
     </div>
 
-    <!-- 3) Risk Radar -->
-    <div class="card" id="risk-radar">
-      <div class="card-icon">⚠️</div>
-      <div class="card-head">
-        <h3>Risk Radar</h3>
-        <span class="badge" title="Launching soon">Coming Soon</span>
+    <!-- Risk Radar -->
+    <div class="card">
+      <div class="card-top">
+        <h3 style="margin:0">Risk Radar</h3>
+        <span class="badge soon"><span class="dot"></span> Coming&nbsp;Soon</span>
       </div>
       <p>Automatically flag top project risks — complete with <strong>AI‑suggested mitigations</strong>.</p>
       <div class="card-actions">
-        <button class="btn primary" disabled>Open</button>
         <a class="btn ghost" href="/contact.html">Get Notified</a>
       </div>
     </div>
 
-    <!-- 4) AI Prompt Pack -->
-    <div class="card" id="ai-prompt-pack">
-      <div class="card-icon">🤖</div>
-      <div class="card-head">
-        <h3>AI Prompt Pack for PMs</h3>
-        <span class="badge" title="Preview coming soon">Coming Soon</span>
+    <!-- AI Prompt Pack -->
+    <div class="card">
+      <div class="card-top">
+        <h3 style="margin:0">AI Prompt Pack for PMs</h3>
+        <span class="badge soon"><span class="dot"></span> Coming&nbsp;Soon</span>
       </div>
       <p>50+ prompts crafted by PMs to supercharge <strong>planning, reporting, and team alignment</strong>.</p>
       <div class="card-actions">
-        <button class="btn primary" disabled>Preview</button>
         <a class="btn ghost" href="/contact.html">Get Notified</a>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
   <div data-include="/partials/footer.html"></div>
   <script src="/include.js" defer></script>
 </body>
