--- a/404.html
+++ b/404.html
@@ -3,105 +3,49 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <!-- Primary SEO -->
-  <title>System & Flow — Project Management. Simplified.</title>
-  <meta name="description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
-  <link rel="canonical" href="https://systemnflow.com/" />
-  <meta name="robots" content="index,follow" />
+
+  <title>Page Not Found | System & Flow</title>
+  <meta name="description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
+  <link rel="canonical" href="https://systemnflow.com/404.html" />
+  <meta name="robots" content="noindex,follow" />
   <meta name="theme-color" content="#0b1220" />
 
-  <!-- Open Graph / Social -->
+  <!-- Social -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="System & Flow — Project Management. Simplified." />
-  <meta property="og:description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
-  <meta property="og:url" content="https://systemnflow.com/" />
-  <meta property="og:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta property="og:title" content="Page Not Found | System & Flow" />
+  <meta property="og:description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
+  <meta property="og:url" content="https://systemnflow.com/404.html" />
+  <meta property="og:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
   <meta property="og:site_name" content="System & Flow" />
-
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="System & Flow — Project Management. Simplified." />
-  <meta name="twitter:description" content="System & Flow builds toolkits, templates, and mini‑apps that make project management easier, faster, and smarter." />
-  <meta name="twitter:image" content="https://systemnflow.com/SNF_logo.png" />
+  <meta name="twitter:title" content="Page Not Found | System & Flow" />
+  <meta name="twitter:description" content="Oops — the page you wanted doesn’t exist. Ronnie probably unplugged something. Explore System & Flow for PM tools that actually work." />
+  <meta name="twitter:image" content="https://systemnflow.com/assets/img/SNF_logo.png" />
 
-  <!-- JSON‑LD (Organization) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "System & Flow",
-    "url": "https://systemnflow.com/",
-    "logo": "https://systemnflow.com/logo.png",
-    "sameAs": [
-      "https://www.instagram.com/systemnflow",
-      "https://www.tiktok.com/@systemnflow",
-      "https://www.linkedin.com/company/systemnflow"
-    ]
-  }
-  </script>
-
-  <!-- Performance hints -->
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
   <link rel="preload" href="/styles.css" as="style" />
-
-  <!-- Styles & Favicon -->
   <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1FRFWG4X18"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-1FRFWG4X18');
-  </script>
-  <title>Page Not Found — System &amp; Flow</title>
-  <meta name="description" content="The page you were looking for doesn’t exist. You’re still in the right place for PM tools that feel simple." />
-  <link rel="stylesheet" href="/styles.css" />
-  <link rel="icon" href="/favicon.ico" />
+  <!-- Favicons -->
+  <link rel="icon" href="/assets/img/favicon.ico" />
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png" />
+
   <style>
-    /* Page-specific polish for the 404 hero */
-    .rfr-hero {
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:18px;
-      text-align:center;
-      padding:40px 20px 8px;
-    }
-    .rfr-hero img {
-      width:300px; max-width:80vw;
-      border-radius:18px;
-      border:1px solid var(--border);
-      box-shadow:0 10px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.02);
-    }
-    .rfr-hero h1 {
-      font-size:clamp(22px, 3.2vw, 34px);
-      margin:8px 0 4px;
-      line-height:1.25;
-    }
-    .rfr-hero p.subtle {
-      color:var(--muted);
-      max-width:720px;
-      margin:0 auto;
-      font-size:15px;
-    }
-    .rfr-actions {
-      display:flex;
-      gap:12px;
-      justify-content:center;
-      margin-top:16px;
-      flex-wrap:wrap;
-    }
+    .rfr-hero{display:flex;flex-direction:column;align-items:center;gap:18px;text-align:center;padding:40px 20px 8px}
+    .rfr-hero img{width:300px;max-width:80vw;border-radius:18px;border:1px solid var(--border);box-shadow:0 10px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.02)}
+    .rfr-hero h1{font-size:clamp(22px,3.2vw,34px);margin:8px 0 4px;line-height:1.25}
+    .rfr-hero p.subtle{color:var(--muted);max-width:720px;margin:0 auto;font-size:15px}
+    .rfr-actions{display:flex;gap:12px;justify-content:center;margin-top:16px;flex-wrap:wrap}
   </style>
 </head>
 <body class="dark">
-  <!-- Header / Navbar -->
   <header class="wrap header">
     <div class="brand">
-      <!-- Make the logo top-left clickable to Home -->
-      <a href="/" style="display:flex; align-items:center; gap:10px; text-decoration:none">
-        <img src="/logo.png" alt="System & Flow icon" class="logo-icon" />
+      <a href="/" style="display:flex;align-items:center;gap:10px;text-decoration:none">
+        <img src="/assets/img/logo.png" alt="System & Flow icon" class="logo-icon" />
         <span class="brand-name">System &amp; Flow</span>
       </a>
     </div>
@@ -112,24 +56,16 @@
     </nav>
   </header>
 
-  <!-- 404 Content -->
   <main class="wrap rfr-hero">
-    <!-- If you uploaded to /assets/img/, change to /assets/img/rfr-unplug.png -->
-    <img src="/rfr-unplug.png" alt="Red-Flag Ronnie accidentally unplugged the site" />
-
+    <img src="/assets/img/rfr-unplug.png" alt="Ronnie accidentally unplugged the site" />
     <h1>Red‑Flag Ronnie got here first.</h1>
-    <p class="subtle">
-      The page you’re looking for doesn’t exist (or Ronnie unplugged something he shouldn’t).
-      You’re still in the right place for PM tools that feel simple.
-    </p>
-
+    <p class="subtle">The page you’re looking for doesn’t exist (or Ronnie unplugged something he shouldn’t). You’re still in the right place for PM tools that feel simple.</p>
     <div class="rfr-actions">
       <a href="/" class="btn">Back to Home</a>
       <a href="/apps.html" class="btn ghost">Explore Tools</a>
     </div>
   </main>
 
-  <!-- Shared footer (pulled in via include.js) -->
   <div data-include="/partials/footer.html"></div>
   <script src="/include.js" defer></script>
 </body>
